--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -45,6 +45,17 @@
 
 			<div class="container py">
 				<div class="main-timeline">
+					<div class="timeline right">
+						<div class="card">
+							<div class="card-body p">
+								<h4 class="fw-bold mb">
+									Drum-Kit <i class="far fa-hand-point-right"></i> <a href="https://szymonpopio.github.io/Drum-Kit/" target="_blank"><i class="link fab fa-github"></i></a><a href="https://github.com/szymonpopio/Drum-Kit" target="_blank"><i class="link fas fa-code"></i></a></a>
+								</h4>
+								<p class="text-muted mb"><i class="far fa-clock" aria-hidden="true"></i> 2022</p>
+								<p class="mb-0">A basic website based on event listeners and sounds.</p>
+							</div>
+						</div>
+					</div>
 					<div class="timeline left">
 						<div class="card">
 							<div class="card-body p">
