--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -34,7 +34,7 @@
 		<div class="middle-container">
 			<div>
 			  <h3 class="intro">
-				Here are some of the noteworthy things i've made through the years!
+				Here are some of the noteworthy things i've made throughout the years!
 			  </h3>
 	  
 			</div>
