Added Simon game
Added a new project and easier readability to the code

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -42,9 +42,22 @@
 		<hr class="style1">
 
 		<section id="timeline">
-
 			<div class="container py">
+
 				<div class="main-timeline">
+
+					<div class="timeline left">
+						<div class="card">
+							<div class="card-body p">
+								<h4 class="fw-bold mb-">
+									Simon Game <i class="far fa-hand-point-right"></i> <a href="https://szymonpopio.github.io/Simon-Game/" target="_blank"><i class="link fab fa-github"></i></a><a href="https://github.com/szymonpopio/Simon-Game" target="_blank"><i class="link fas fa-code"></i></a></a>
+								</h4>
+								<p class="text-muted mb"><i class="far fa-clock" aria-hidden="true"></i> 2022</p>
+								<p class="mb-0">A website based on "Simon game", an introduction to jQuery.</p>
+							</div>
+						</div>
+					</div>
+
 					<div class="timeline right">
 						<div class="card">
 							<div class="card-body p">
@@ -56,6 +69,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="timeline left">
 						<div class="card">
 							<div class="card-body p">
@@ -67,6 +81,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="timeline right">
 						<div class="card">
 							<div class="card-body p">
@@ -78,6 +93,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="timeline left">
 						<div class="card">
 							<div class="card-body p">
@@ -89,6 +105,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="timeline right">
 						<div class="card">
 							<div class="card-body p">
@@ -100,6 +117,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="timeline left">
 						<div class="card">
 							<div class="card-body p">
