--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         <a href="https://www.linkedin.com/in/szymon-popiolek-743752220/" target="_blank">LinkedIn</a>
         <a href="https://github.com/szymonpopio" target="_blank">GitHub</a>
         <a href="https://www.facebook.com/profile.php?id=100012562876390" target="_blank">Facebook</a>
+        <a href="mailto:2004szymonp@gmail.com">Mail</a>
       </div>
       <p class="copyright">© 2022 Szymon Popiolek</p>
     </div>
