--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -77,7 +77,7 @@
 									Dicegame <i class="far fa-hand-point-right"></i> <a href="https://szymonpopio.github.io/Dice-Game/" target="_blank"><i class="link fab fa-github"></i></a><a href="https://github.com/szymonpopio/Dice-Game" target="_blank"><i class="link fas fa-code"></i></a></a>
 								</h4>
 								<p class="text-muted mb"><i class="far fa-clock" aria-hidden="true"></i> 2021</p>
-								<p class="mb-0">A small challange to freshen up some thing that i forgot.</p>
+								<p class="mb-0">A small challange to freshen up some thing that I forgot.</p>
 							</div>
 						</div>
 					</div>
@@ -101,7 +101,7 @@
 									Database <i class="far fa-hand-point-right"></i> <a href="https://szymonpopio.github.io/Databasemodellering/" target="_blank"><i class="link fab fa-github"></i></a><a href="https://github.com/szymonpopio/Databasemodellering" target="_blank"><i class="link fas fa-code"></i></a></a>
 								</h4>
 								<p class="text-muted mb"><i class="far fa-clock" aria-hidden="true"></i> 2021</p>
-								<p class="mb-0">The most advanced thing a have to date, it is a database where you can create people, cars and homes. And they all bind together using Firebase</p>
+								<p class="mb-0">The most advanced thing I have to date, it is a database where you can create people, cars and homes. And they all bind together using Firebase</p>
 							</div>
 						</div>
 					</div>
@@ -125,7 +125,7 @@
 									First Project <i class="far fa-hand-point-right"></i> <a href="https://szymonpopio.github.io/First-Project/" target="_blank"><i class="link fab fa-github"></i></a><a href="https://github.com/szymonpopio/First-Project" target="_blank"><i class="link fas fa-code"></i></a></a>
 								</h4>
 								<p class="text-muted mb"><i class="far fa-clock" aria-hidden="true"></i> 2020</p>
-								<p class="mb-0">The first actual project i made, a kind of personal website using only HTML and CSS.</p>
+								<p class="mb-0">The first actual project I made, a kind of personal website using only HTML and CSS.</p>
 							</div>
 						</div>
 					</div>
